# extractGribConfig

./: .gitattributes  CMakeLists.txt  README.md
etc/: CMakeLists.txt
etc/griblists/eidb/: control.list  standing.list  user.list
etc/griblists/ekmi/: standing.list
etc/griblists/imo/: control.list
etc/griblists/knmi/: control.list  standing.list  user.list
etc/namelist_inc/eidb/: 20-DubBay-2.5k.inc  20-IRELAND-FIR.inc  20-IRELAND90.inc
etc/namelist_inc/ekmi/: 20-dmi.inc
etc/namelist_inc/imo/: 20-HM-750m.inc  20-IGB-25km-out.inc  20-IGB-25km.inc
etc/namelist_inc/knmi/: 20-HA40_L25.inc  20-HA40_L50.inc  20-HA43_N55.inc  20-IRELAND25-10k.inc  20-NL.inc
etc/paramlists/: ml_aviation.list
etc/paramlists/eidb/: en.list  pp.list  rt.list  sfx.list
etc/paramlists/ekmi/: basic.list  en.list
etc/paramlists/imo/: water.list
etc/paramlists/knmi/: enparm2.list  levels.list  waterg1.list
share/: CMakeLists.txt
share/griblists/eidb/: control.list  standing.list  user.list
share/griblists/ekmi/: standing.list
share/griblists/imo/: control.list
share/griblists/knmi/: control.list  standing.list  user.list
share/namelist_inc/: 20-DINI20a.inc  20-DINI25a-10k.inc  20-DINI25a-20k.inc  20-DINI25a-5k.inc  20-DINI25a.inc
share/namelist_inc/eidb/: 20-IRELAND-FIR-10k.inc  20-IRELAND25.inc  20-IRELAND90-10k.inc  20-IRELAND90-20k.inc  20-IofIE.inc
share/namelist_inc/ekmi/: 20-dmi_FIR.inc  20-dmi_FIR_10k.inc  20-dmi_land.inc  20-dmi_ship.inc  20-dmi_ship_10k.inc
share/namelist_inc/imo/: 20-HM-25km.inc
share/paramlists/: synop-scale.list
(+13 files in other folders)
